project(ptr C Fortran)
cmake_minimum_required(VERSION 3.0)

include_directories(${PROJECT_SOURCE_DIR}/../install/include)
link_directories(${PROJECT_SOURCE_DIR}/../install/lib64)

add_executable(ptr-F ptr.F90)
target_link_libraries(ptr-F bml m)

set(EXTRA_FLAGS "-O0 -g -fopenmp --coverage")

get_target_property(TEMP ptr-F COMPILE_FLAGS)
if(NOT TEMP)
  set(TEMP "")
else()
  set(TEMP "${TEMP} ")
endif()
set(TEMP "${TEMP}${EXTRA_FLAGS}")
set_target_properties(ptr-F PROPERTIES COMPILE_FLAGS "${TEMP}")

get_target_property(TEMP ptr-F LINK_FLAGS)
if(NOT TEMP)
  set(TEMP "")
else()
  set(TEMP "${TEMP} ")
endif()
set(TEMP "${TEMP}${EXTRA_FLAGS}")
set_target_properties(ptr-F PROPERTIES LINK_FLAGS "${TEMP}")

add_executable(ptr-C ptr.c)
target_link_libraries(ptr-C bml m)

get_target_property(TEMP ptr-C COMPILE_FLAGS)
if(NOT TEMP)
  set(TEMP "")
else()
  set(TEMP "${TEMP} ")
endif()
set(TEMP "${TEMP}${EXTRA_FLAGS}")
set_target_properties(ptr-C PROPERTIES COMPILE_FLAGS "${TEMP}")

get_target_property(TEMP ptr-C LINK_FLAGS)
if(NOT TEMP)
  set(TEMP "")
else()
  set(TEMP "${TEMP} ")
endif()
set(TEMP "${TEMP}${EXTRA_FLAGS}")
set_target_properties(ptr-C PROPERTIES LINK_FLAGS "${TEMP}")
